--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,33 @@
+html, body {
+	height: 100%;
+}
+
+body{
+	font-family: 'Finger Paint', cursive;
+}
+.background {
+	background: url('../img/bg.png');
+	background-size: cover;
+	background-position: center;
+	height: 100%;
+}
+
 .navbar {
-	height: 100px;
-	background-color: #704b0a; 
+	height: 75px;
+	background-color: transparent;
+	font-weight:bolder;
+	font-family: 'Sancreek', cursive;
 
 }
 
-#hangman {
-	display: inline-block;
-
+.card, .card-header {
+	float: right;
+	background: transparent;
+	color: black;
+	border: none;
 }
 
-.custom {
-	background: red;
-	text-align: center;
-	height:50px;
-	margin-top: 100px;
+.font {
+	font-family: 'Sancreek', cursive;
+
 }
